cellular automata game of life w flag

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2704,7 +2704,7 @@ input, select, textarea {
 /* Cellular Automata Canvas */
 
 	#cellular-automata-canvas {
-		position: fixed;
+		position: absolute;
 		top: 0;
 		left: 35%;
 		width: calc(100% - 35%);
