--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2074,7 +2074,7 @@ input, select, textarea {
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
 				content: 'View';
-				display: inline-block;
+				display: none;
 				font-size: 0.8em;
 				font-weight: 400;
 				left: 50%;
@@ -2095,7 +2095,7 @@ input, select, textarea {
 
 			.image.thumb:hover:before {
 				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				opacity: 0.5;
 			}
 
 		.image img {
