--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2654,6 +2654,18 @@ input, select, textarea {
 			margin: 0 0 1.5em 0;
 		}
 
+		.work-item .image.fit {
+			height: 250px;
+			overflow: hidden;
+		}
+
+		.work-item .image.fit img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
+
 		.work-item h3 {
 			font-size: 1em;
 			margin: 0 0 0.5em 0;
